force-app/main/default/objects/Commission_Rule__mdt/Commission_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Regras de calculo de comissao por tipo de venda - configuravel sem deploy de codigo</description>
    <label>Commission Rule</label>
    <pluralLabel>Commission Rules</pluralLabel>
</CustomObject>