force-app/main/default/objects/Commission_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se esta regra de comissao esta ativa</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>