force-app/main/default/objects/Commission_Rule__mdt/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>Percentual de comissao aplicado ao valor da oportunidade</description>
    <label>Taxa de Comissao (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>