force-app/main/default/objects/Commission_Rule__mdt/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <description>Valor minimo da oportunidade para esta regra ser aplicada</description>
    <label>Valor Minimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>