force-app/main/default/objects/Commission_Rule__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stage da oportunidade ao qual esta regra se aplica</description>
    <label>Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>